# log_time_redmine

./: .flutter-plugins  .gitignore  HB2_1799_JPREP Dojo_Timesheet_202603 - Nguyen Van Ben.csv  README.md  app.py  pubspec.yaml  pyproject.toml  requirements.txt
docs/: PROJECT_DOCUMENTATION.md
lib/: main.dart
lib/features/csv/bloc/: csv_bloc.dart  csv_event.dart  csv_state.dart
lib/features/csv/models/: csv_model.dart
lib/features/csv/screens/: csv_screen.dart
lib/features/csv/utils/: csv_parser.dart
lib/features/time_entry/models/: time_entry_request.dart
lib/features/time_entry/repositories/: time_entry_repository.dart
redmine_time_client/: __init__.py  base.py  factory.py  http.py  mock.py
static/css/: style.css
static/js/: app.js
templates/: index.html
test/: widget_test.dart
tests/: test_redmine_time_client.py
web/: index.html  manifest.json
